--- a/schedule.Rmd
+++ b/schedule.Rmd
@@ -29,7 +29,8 @@ Readings:
 
 Lectures:
 
-- Slides: [html](./slides/EDUC641_1_intro.html) | [pdf](./slides/EDUC641_1_intro.pdf)
+- Class 1 slides: [html](./slides/EDUC641_1_intro.html) | [pdf](./slides/EDUC641_1_intro.pdf)
+- Class 2 slides: [html](./slides/EDUC641_2_measures.html) | [pdf](./slides/EDUC641_2_measures.pdf)
 - R Tutorial slides: [html](./slides/tutorial.html)
 
 ## Unit 1 
@@ -45,13 +46,13 @@ Objectives:
 
 Readings: 
 
-- [LSWR Chapters 6](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Evans 2020](https://www.newstatesman.com/uncategorized/2020/07/ra-fisher-and-science-hatred)
+- [LSWR Chapter 6](https://learningstatisticswithr.com/lsr-0.6.pdf) and [Evans 2020](https://www.newstatesman.com/uncategorized/2020/07/ra-fisher-and-science-hatred)
 
 Lectures: 
 
-- Slides: [html](./slides/EDUC641_2_categ_1.html) | [pdf](./slides/EDUC641_2_categ_1.pdf) 
+- Class 3 slides: [html](./slides/EDUC641_3_categdescr.html) | [pdf](./slides/EDUC641_3_categdescr.pdf) 
 - Data: [deathpenalty.csv](./data/deathpenalty.csv) | [codebook](./data/deathpenalty.csv)
-- R code: [R script](./slides/EDUC641_2_code.R)
+- R code: [R script](./slides/EDUC641_1_code.R)
 
 Assignment 1: 
 
@@ -77,7 +78,10 @@ Readings:
 
 Lectures:
 
-- Slides: [html](./slides/EDUC641_2_categ_2.html) | [pdf file](./slides/EDUC641_2_categ_2.pdf)
+- Class 4 slides: [html](./slides/EDUC641_4_categrel_1.html) | [pdf](./slides/EDUC641_4_categrel_1.pdf)
+- Class 5 slides: [html](./slides/EDUC641_5_categrel_2.html) | [pdf](./slides/EDUC641_5_categrel_2.pdf)
+- Class 6 slides: [html](./slides/EDUC641_6_history.html)    | [pdf](./slides/EDUC641_6_history.pdf)
+
 - Data: [deathpenalty.csv](./data/deathpenalty.csv) | [codebook](./data/deathpenalty.csv)
 - R code: [R script](./slides/EDUC641_2_code.R) 
  
@@ -113,8 +117,14 @@ Readings:
 
 Lecture slides: 
 
-- Distributions slides: [html](./slides/continuous_l1.html) 
-- CLT and inference slides: [html](./slides/continuous_l2.html)
+- Class 7 slides: [html](./slides/EDUC641_7_continuousdescr_1.html) 
+- Class 8 slides: [html](./slides/EDUC641_8_continuousdescr_2.html)
+- Class 9 slides: [html](./slides/EDUC641_9_zscores.html)
+- Class 10 slides: [html](./slides/EDUC641_10_clt_1.html)
+- Class 11 slides: [html](./slides/EDUC641_11_clt_2.html)
+- Class 12 slides: [html](./slides/EDUC641_12_nhst.html)
+- Class 13 slides: [html](./slides/EDUC641_13_ttest.html)
+
 - Data: [life_expectancy.csv](./data/life_expectancy.csv)
 - R script:
 
@@ -148,8 +158,11 @@ Readings:
 
 Lecture slides: 
 
-- Continuous relationship slides: [html](./slides/EDUC641_4_continuous_2.html) | [pdf](./slides/EDUC641_4_continuous_2.pdf)
-- NHST critiques slides: [html](./slides/EDUC641_4_continuous_3.html) | [pdf](./slides/EDUC641_4_continuous_3.pdf)
+
+- Class 14 slides: [html](./slides/EDUC641_4_continuous_2.html) | [pdf](./slides/EDUC641_4_continuous_2.pdf)
+- Class 15 slides:
+- Class 16 slides: 
+
 - Data: [life_expectancy.csv](./data/life_expectancy.csv)
 - R code: [R script](./slides/EDUC641_4_code.R) 
 
@@ -160,6 +173,8 @@ Assignment 4:
 - [cont.csv](./data/cont.csv)
 
 ## Unit 5
+
+- NHST critiques slides: [html](./slides/EDUC641_4_continuous_3.html) | [pdf](./slides/EDUC641_4_continuous_3.pdf)
 
 ## Final Assignment
 
