--- a/slides/EDUC641_1_intro.Rmd
+++ b/slides/EDUC641_1_intro.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Introduction and Principles of Quantitative Research"
-subtitle: "EDUC 641: Intro"
-author: "TBD"
+subtitle: "EDUC 641: Class 1"
+author: "David D. Liebowitz"
 #date: "`r format(Sys.time(), '%d %B %Y')`"
 output:
   xaringan::moon_reader:
@@ -35,11 +35,13 @@ slate = "#314f4f"
 
 extra_css <- list(
   ".red"   = list(color = "red"),
-  ".blue"  =list(color = "blue"),
+  ".blue"  = list(color = "blue"),
   ".red-pink" = list(color= "red_pink"),
   ".grey-light" = list(color= "grey_light"),
   ".purple" = list(color = "purple"),
-  ".small" = list("font-size" = "90%"))
+  ".small" = list("font-size" = "90%"),
+  ".tiny" = list("font-size" = "70%"),
+  ".tiny2" = list("font-size" = "50%"))
 
 write_extra_css(css = extra_css, outfile = "my_custom.css")
 
@@ -64,7 +66,12 @@ options(knitr.table.format = "html")
 ```{r, out.width = "90%", echo=F}
   include_graphics("roadmap.png")
 ```
-                                                          
+
+---
+# Class goals
+
+1. Describe goals and structure and of the course (and the quantitative EDUC sequence more broadly) and principles of scientific research
+
 ---
 # Goals of EDUC quant sequence
 
@@ -85,10 +92,15 @@ options(knitr.table.format = "html")
 - Students learn statistical analysis by doing statistical analysis
 - Start from an assumption of no prior background in mathematics, statistics or research
 - Create an inclusive, supportive environment in which we learn from each other
+- Balance support and academic stretch across a variety of levels of prior experience and comfort with quantitative analysis
 
--- 
+--
 
-.blue[Social conventions and schooling practices often convince some people, particularly women,  people of color and disabled individuals, that they are “bad at math.” We believe that quantitative skills, like any other skills, are built through regular practice, over time, and that all of our students can be successful in the EDUC quant sequence. We encourage all students, particularly those underrepresented in this field, to pursue the EDUC sequence and additional quantitative analysis courses in the COE and around the UO.]
+<br>
+
+.blue[**Social conventions and schooling practices often convince some people, particularly women,  people of color and disabled individuals, that they are “bad at math.” We believe that quantitative skills, like any other skills, are built through regular practice, over time, and that all of our students can be successful in the EDUC quantitative sequence.**]
+
+.blue[**We encourage all students, particularly those underrepresented in this field, to pursue the EDUC sequence and additional quantitative analysis courses in the COE and around the UO.**]
 
 ---
 # Goals of EDUC 641
@@ -101,33 +113,67 @@ Concrete learning objectives:
 3. Describe, summarize and visualize the relationships between quantitative data that are categorical and continuous
 4. Conduct a frequentist null-hypothesis significance test of the relationships between simple categorical and continuous data
 5. Describe strategies to improve the replicability and generalizability of quantitative research
-6. Use the R programming language to conduct all such analyse
+6. Use the R programming language to conduct all such analyses
 
 ---
-# Roadmap of class
+# Roadmap of EDUC 641
 
 | Unit  | Week(s) | Topic
 |------------------------------------------------------------------------------
-| 0     | 1       | Introduction to scientific principles and quant analysis
+| 0     | 1       | Introduction to scientific principles and quantitative analysis
 | 1     | 2       | Categorical descriptives
 | 2     | 2-3     | Categorical relationships
 | 3     | 4-6     | Continuous descriptives and inference
 | 4     | 7-8     | Continuous relationships
 | 5     | 9-10    | Threats and wrap-up
 
+
+---
+# Weekly schedule of activities
+
+1. Two 1.5-hour lectures will introduce concepts in interactive lectures, discussion and activities
+2. Readings are intended to supplement material from lectures (these can be completed after the first class of the unit)
+3. Two *OPTIONAL, UNGRADED* weekly lab meetings intended to provide support for R programming tasks. Each lab will cover identical material.
+4. Five (5) quizzes worth trivial amount of points each
+5. Four (4) data analytic assignments + final project
+
+--
+
+<br>
+Course website is (we hope!) a valuable resource. Let's check it out!
+
+---
+class: middle, inverse
+
+# Principles of scientific research
+
+---
+# Roadmap
+
+```{r, out.width = "90%", echo=F}
+  include_graphics("roadmap.png")
+```
+
 ---
 # Features of scientific research
 
-#### 1. Empirically based
-#### 2. Systematic
-#### 4. Defined sample and population
-#### 4. Contextualized
-#### 5. Reliabile and valid
-#### 6. Disprovable
-#### 7. Peer-reviewed
+<br>
 
+.small[
+
+### 1. Empirically based
+### 2. Systematic
+### 4. Defined sample and population
+### 4. Contextualized
+### 5. Reliabile and valid
+### 6. Disprovable
+### 7. Peer-reviewed
+
+]
 ---
-# Three facets to research
+# Three facets of research
+
+<br>
 
 .pull-left[
 ### Design
@@ -138,31 +184,20 @@ Concrete learning objectives:
 
 ### Measurement
 - How will you collect data?
-- Who will be observer?
+- How will you observe individuals' behavior?
 - How will measurement be valid?
-]
-.pull-right[
-### Analysis
-- How will you process the data?
-- How will you display results?
-- How will you communicate findings?
-]
-
-
----
-# Kinds of statistics
-
-### Often conceived of as...
-.pull-left[
-### Either descriptive or inferential
-]
-.pull-right[
-### Either exploratory or confirmatory
 ]
 
 --
 
-### In fact, on a continuum
+.pull-right[
+### Analysis
+- How will you process the data?
+- How will you estimate relationships?
+- How will you display results?
+- How will you communicate findings?
+]
+
 
 ---
 # Research design and statistics
@@ -170,115 +205,29 @@ Concrete learning objectives:
 #### This sequence focuses on statistics, but **research design** is AS (MORE?) important
 #### It can be tempting to use statistical techniques to fix poor research design
 - "You can't fix by analysis what you bungled by design" -Light, Singer & Willett. (1990). *By Design*
-- Make sure you have mastered content from EDUC 612, particularly concepts of: 
+- Make sure you master content from EDUC 612, particularly concepts of: 
  + measurement, internal and external validity
-- Strongly encourage you to consider courses in advanced research design (EDUC 646, EDLD 650, EDLD 679)
-
-
----
-# Types of data
-
-```{r, out.width = "80%", echo=F}
-  include_graphics("roadmap.png")
-```
-
-**How we collect and quantify the data informs the kind of analysis we will conduct.**
-
-
----
-# Levels/scales of measurement
-
-**What is measurement?** assigning numbers based on a set of rules
-
-**Levels of measurement**: how categories/numbers are defined
-
-Each type of measurement has a set of properties which determines the appropriate analysis.
-
---
-### Four levels/scales of measurement
-
-1. Nominal
-2. Ordinal
-3. Interval
-4. Ratio
-
----
-# Nominal scale
-
-#### No hierarchy among levels of a variable
-#### Levels are unordered, representing labels
-#### A variable defining whether someone is an omnivore, vegetarian, vegan or fruititarian is on a nominal sclae
-
-#### Most demographic variables are nominal:
-- Hair color
-- Race
-- Ethnicity
-- Gender
-
----
-# Ordinal scale
-
-#### Levels are logically ordered; a higher level indicates "more"
-#### Distances between levels are not necessarily equal
-#### Level 1 < Level 2 < Level 3 < ... (monotonicity)
-
-#### Examples:
-- Grades (A - F letter grades)
-- Competition (1st place, 2nd place, 3rd place)
-- Likert scale (on a scale of 1 to 10 with 1 being *very unhappy* and ten being *very happy*, how happy are you today?)
-
----
-# Interval scale
-
-#### Represents *quantity* and has *equal units*
-#### Ordinal scale + equal measurement units
-#### **There is no absolute zero**
-
-#### Examples:
-- The Fahrenheit temperature scale
- + The difference between 20 F and 30 F is the same as the difference between 60 F and 70 F
- + 0 does not represent "no temperature"
- + There is no concept of dividing or multiplying values on the scale. There are no ratios. We can't describe 50 F as half as hot as 100 F or twice as hot as 25 F
-
----
-# Ratio scale
-
-#### Interval scale + True zero point
-#### True zero means a point where the thing being measured does not exist
-
-Examples:
-- Height
-- Mass
-- Distance
-- Length of a piece of wood
-- Test score (?)
-
----
-# Levels of measurement
-
-|          | Indicates difference | Indicates direction of difference | Indicates amount of difference | Has absolute zero
-|---------------------------------------------------------------------------------------------------------------------------
-| Nominal  | X |   |   | 
-| Ordinal  | X | X |   | 
-| Interval | X | X | X | 
-| Ratio    | X | X | X | X
-
---
-
-#### Categorical variable
-- Nominal and ordinal measures
-- Use labels to describe
-
---
-
-#### Continuous variable
-- Interval and ration measures
-- Data with arithmetic properties
+- Strongly encourage you to consider courses in advanced research design (EDUC 646, EDLD 650, EDLD 679) after completing the quantitative EDUC sequence
 
 ---
 class: middle, inverse
 # Synthesis and wrap-up
 
 
+---
+# Class goals
 
+1. Describe goals and structure and of the course (and the quantitative EDUC sequence more broadly) and principles of scientific research
+
+---
+# To-Dos
+
+### Reading: 
+- LSWR Chapter 2: this is a brief summary of what you have/will learn(ed) in EDUC 612 
+- LSWR Chapter 3: this covers some information from the R Bootcamp and more 
+    + You will **not** internalize all of this in one reading and practice session. Give it a skim, play around with R while you're doing so, and you can return to it as you want/need to build more of programming skills.
+- Clayton (2020)
+
+### Assignment:
+- Download and familiarize yourself with R/RStudio interface
 
