--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -19,8 +19,13 @@ library(tidyverse)
 This course provides a first introduction to quantitative data analysis in education and the social sciences. It is part of a three course sequence intended to provide a toolkit of statistical concepts, methods and their implementation to producers of applied research in education and other social sciences. This course is intended for those who will pursue additional statistics courses with the aim of ultimately conducting their own, independent research. The course is organized around the principle that research design depends in part on researchers' substantive questions and their quantitative data available to answer these question. In this introductory course, we will focus on describing categorical and continuous data and quantifying the relationship between categorical and continuous data. Students will form a solid foundation for frequentist, inferential statistics (and some of critiques of this model). The course seeks to blend a conceptual, mathematical and applied understanding of basic statistical concepts. At the core of our pedagogical approach is the belief that students learn statistical analysis by **doing** statistical analysis. *This course (or substitute) is a pre-requisite for EDUC 643*.
 
 # Meeting Time and Location
+*Class:* Tuesdays and Thursdays, 4:00pm - 5:20pm, 146 HEDCO
+*Lab:* Mondays, 4:00pm - 4:50pm, 116 Lokey and Tuesdays, 5:30pm - 6:20pm 146 HEDCO 
 
 # Instructors
+David Liebowitz
+Claire Zhang
+Havisha Khurana
 
 # Student Learning Outcomes
 By the end of this term, it is expected that students will be able to:
@@ -41,11 +46,20 @@ We will primarily be referring to chapters in [Learning Statistics with R](https
 There are some additional readings assignments on the troubling historical origins of modern statistics that appear in the detailed [schedule](./schedule.html). 
 
 ### Other text resources
-There are literally thousands of high-quality introductory statistics textbooks. We have particularly found...
+There are literally thousands of high-quality introductory statistics textbooks. We have particularly found the following to be helpful:
+
+Howell, D.C. (2013). Statistical Methods for Psychology. Cengage Learning: Belmont, CA. [A balanced book in terms of technical details and conceptual discussion. A lot of examples and discussions with a context in psychology and social science.]
+
+Fox, J. (2015) Applied Regression Analysis and Generalized Linear Models. 3rd Ed. SAGE Publications: Thousand Oaks, CA. [Focused only on regression and a lot more detail in regression diagnostics, remedial measures, etc. compared to Howell]
+
+Darlington, R.B. & Hayes, A.F. (2016) Regression Analysis and Linear Models. Guilford Press: New York, NY. [Strong conceptual discussion and many examples]
+
+Gelman, A., Hill, J. & Vehtari, A. (2020). Regression and Other Stories. Cambridge University Press: Cambridge, UK. [Focused on applied problems of data analysis, estimation, prediction and causal inference. Computation in R with code available online. Note: this book primarily takes a Bayesian approach to inference and so will be more appropriate as you advance in your learning.]
+
 
 ## R and RStudio
 
-Students must have the latest version of R, which can be downloaded [here](https://ftp.osuosl.org/pub/cran/). It is strongly recommended that students also download the RStudio GUI, available [here](https://www.rstudio.com/products/rstudio/download/#download). Both softwares are free. We will provide tutorials on R/RStudio installation and they are also accessible [here](.slides/tutorial.html).
+Students must have the latest version of R, which can be downloaded [here](https://ftp.osuosl.org/pub/cran/). It is strongly recommended that students also download the RStudio GUI, available [here](https://www.rstudio.com/products/rstudio/download/#download). Both softwares are free. The R bootcamp will provide a tutorial on R/RStudio installation and we also provide a short demonstration of R/Rstudio installation [here](.slides/tutorial.html).
 
 ### Resources for R and RStudio
 
@@ -53,10 +67,10 @@ While we will teach you how to effectively use R and RStudio to conduct analyses
 
 Here are some sites where you can find the answers to many R questions and learn new tricks:
 
- - [_YaRrr, the Pirate's Guide to R_](https://bookdown.org/ndphillips/YaRrr/) by Nathaniel Phillips
- - [_R for Data Science_](https://r4ds.had.co.nz/) by Hadley Wickham
- - [_R Cookbook_](http://www.cookbook-r.com/) by Winston Chang
- - [_An Introduction to Statistical Learning_](http://www-bcf.usc.edu/~gareth/ISL) by Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani
+ - [*YaRrr, the Pirate's Guide to R*](https://bookdown.org/ndphillips/YaRrr/) by Nathaniel Phillips
+ - [*R for Data Science*](https://r4ds.had.co.nz/) by Hadley Wickham
+ - [*R Cookbook*](http://www.cookbook-r.com/) by Winston Chang
+ - [*An Introduction to Statistical Learning*](http://www-bcf.usc.edu/~gareth/ISL) by Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani
  - [Cheat Sheets](https://www.rstudio.com/resources/cheatsheets) 
  - [Quick-R](https://www.statmethods.net) 
  - [StackOverflow](https://stackoverflow.com/questions/tagged/r)
@@ -82,10 +96,10 @@ Final grades will be based on the following components:
 - Final: 30%
 
 ## Quizzes
-Five classes will begin with a very short multiple-choice quiz that is designed to test your knowledge of the theoretical principles underlying the statistics we are studying for the week. While some may feel that this is overly paternalistic, research evidence shows that frequent quizzing increases learning (see a summary of [one study](https://www.nytimes.com/2013/11/21/education/frequent-tests-can-enhance-college-learning-study-finds.html) from the University of Texas). Quizzes will be open book and notes (but not laptop/computer).
+Five classes will begin with a very short multiple-choice quiz that is designed to test your knowledge of the theoretical principles underlying the statistics we are studying for the week. While some may feel that this is overly paternalistic, research evidence shows that frequent quizzing increases learning (see a summary of [one study](https://www.nytimes.com/2013/11/21/education/frequent-tests-can-enhance-college-learning-study-finds.html) from the University of Texas). Quizzes will be open book, notes and computer.
 
 ## Assignments
-The goal of the assignments is to practice the concepts and vocabulary we have been modeling in class and implement some of the techniques we have learned. Each assignment has an associated data source, short codebook and detailed instructions for the required data and analytic tasks. You may work on your own or collaborate with one (1) partner. Please make sure that you engage in a a full, fair and mutually-agreeable collaboration if you do choose to collaborate. If you do collaborate, you should plan, execute and write-up your analyses together, not simply divide the work. Please make sure to indicate clearly when your work is joint and any other individual or resource (outside of class material) you consulted in your response. Further assignment details are available [here](./assignments.html)
+The goal of the assignments is to practice the concepts and vocabulary we have been modeling in class and implement some of the techniques we have learned. Each assignment has an associated data source, short codebook and detailed instructions for the required data and analytic tasks. You may work on your own or collaborate with one (1) partner. Please make sure that you engage in a full, fair and mutually-agreeable collaboration if you do choose to collaborate. If you do collaborate, you should plan, execute and write-up your analyses together, not simply divide the work. Please make sure to indicate clearly when your work is joint and any other individual or resource (outside of class material) you consulted in your response. Further assignment details are available [here](./assignments.html)
 
 ## Final
 The final assignment involves a more extended application and synthesis of the concepts of descriptive and relational applied data analysis covered in this course.
@@ -95,30 +109,102 @@ Graduate students are expected to perform work of high quality and quantity, typ
 
 | Educational activity     | Hours         |    Explanatory comments
 |--------------------------|---------------|---------------------------------
-| Class attendance         | 30            | TBD frequency
+| Class attendance         | 30            | 20 sessions * 1.5 hours
 | Class reading and prep   | 20            | Includes reading and review of slides
 | Homework Assignments     | 40            | Homework assignments will take 10 hours each (on avg.)
 | Final                    | 30            | Includes familiarization with data, data analysis, preparation of displays and writing
 | **Total hours**          | **120**       | **These are approximations.** Reading and *especially* analytic time will vary per individual
 
 
+
+# Common Course Policies
+
 ## Indigenous Recognition Statement
-## Role of the GEs  
-## Attendance and Absence Guidelines  
-## Diversity, Equity, and Inclusion  
-## Using Pronouns and Personal Preference  
+The University of Oregon is located on Kalapuya Ilihi, the traditional indigenous homeland of the Kalapuya people. Today, descendants are citizens of the Confederated Tribes of the Grand Ronde Community of Oregon and the Confederated Tribes of the Siletz Indians of Oregon, and they continue to make important contributions in their communities, at UO, and across the land we now refer to as Oregon.
+
+## UO COVID Regulations and Prevention
+TBD
+
+## Absence and Attendance Policies
+Attendance at all class and discussion groups is expected and required. Students must contact the instructor in case of illness or emergencies that preclude attending class sessions. Messages can be left on the instructor’s e-mail at any time of the day or night, prior to class. 
+
+As the university community adjusts to teaching and learning in the context of the COVID-19 pandemic, course requirements, deadlines, and grading percentages are subject to change. I will be mindful of the many impacts the unfolding events related to COVID-19 may be having on you. There may be situations beyond the control of individual students that lead to excessive absences such as becoming ill, caring for others, managing home schooling, etc. Students are expected to attend class, however if a student misses more than two consecutive classes they will be asked to complete a make-up assignment to be developed by the instructor to compensate for the missed class time. Each student who is experiencing difficulty attending scheduled class times or class activities must contact the instructor to develop a plan for making up the class time and satisfactorily meeting the credit hours required.
+  
+## Diversity, Equity, and Inclusion
+It is the policy of the University of Oregon to support and value equity and diversity and to provide inclusive learning environments for all students.  To do so requires that we:
+
+*	respect the dignity and essential worth of all individuals. 
+*	promote a culture of respect throughout the University community. 
+*	respect the privacy, property, and freedom of others. 
+*	reject bigotry, discrimination, violence, or intimidation of any kind. 
+*	practice personal and academic integrity and expect it from others. 
+*	promote the diversity of opinions, ideas and backgrounds which is the lifeblood of the university.
+
+In this course, class discussions, projects/activities and assignments will challenge students to think critically about and be sensitive to the influence, and intersections, of race, ethnicity, nationality, documentation, language, religion, gender, socioeconomic background, physical and cognitive ability, sexual orientation, and other cultural identities and experiences. Students will be encouraged to develop or expand their respect and understanding of such differences.
+
+Maintaining an inclusive classroom environment where all students feel able to talk about their cultural identities and experiences, ideas, beliefs, and values will not only be my responsibility, but the responsibility of each class member as well. Behavior that disregards or diminishes another student will not be permitted for any reason. This means that no racist, ableist, transphobic, xenophobic, chauvinistic or otherwise derogatory comments will be allowed. It also means that students must pay attention and listen respectfully to each other’s comments
+
+## Using Pronouns and Personal Preference
+The College of Education is always working to include and engage everyone. One way we can do this is to share your pronouns, or the words you want to be called when people aren’t using your name. Like names, pronouns are an important part of how we identify that deserves to be respected. And we recognize that assuming someone’s gender can be hurtful, especially to members of our community who are transgender, genderqueer, or non-binary. As a community, we are all learning together about the importance of pronouns and being better allies to the trans community on campus. Please discuss the pronouns you wish to be used with your professor to help them be aware of how to address you respectfully. Please visit this university [website](https://studentlife.uoregon.edu/pronouns) for more information.
+
 ## Accessible Education
+The University of Oregon is working to create inclusive learning environments. Please notify me if there are aspects of the instruction or design of this course that result in disability-related barriers to your participation. Participation includes access to lectures, web-based information, in-class activities, and exams. The [Accessible Education Center](http://aec.uoregon.edu/) works with students to provide an instructor notification letter that outlines accommodations and adjustments to class design that will enable better access. Contact the Accessible Education Center in 360 Oregon Hall at 541-346-1155 or [uoaec@uoregon.edu](uoaec@uoregon.edu) for assistance with access or disability-related questions or concerns.
+
+## Children in Class
+As a parent of three young children, I understand the difficulty in balancing academic, work, and family commitments.  Here are my policies (with credit to [Daniel Anderson](https://github.com/datalorax)) regarding children in class:
+
+* All breastfeeding babies are welcome in class as often as necessary.
+* Non-nursing babies and older children are welcome whenever alternate arrangements cannot be made. I understand that childcare arrangements fall through, partners have conflicting schedules, children get sick, and other issues arise that leave caregivers with few other options.
+* In cases where children come to class, I invite parents/caregivers to sit close to the door so as to more easily excuse yourself to attend to your child’s needs. Non-parents in the class: please reserve seats near the door for your parenting classmates.
+* All students are expected to join with me in creating a welcoming environment that is respectful of your classmates who bring children to class.
+* I understand that sleep deprivation and exhaustion are among the most difficult aspects of caring for young children. The struggle of balancing school, work, childcare, and graduate school is tiring (not to mention being in the middle of a pandemic!), and I will do my best to accommodate any such issues while maintaining the same high expectations for all students enrolled in the class. Please do not hesitate to contact me with any questions or concerns.
+
 ## Reporting Title IX Experiences
+Any student who has experienced sexual assault, relationship violence, sex or gender-based bullying, stalking, and/or sexual harassment may seek resources and help at safe.uoregon.edu. To get help by phone, a student can also call either the UO’s 24-hour hotline at 541-346-7244 [SAFE], or the non-confidential Title IX Coordinator at 541-346-8136. From the SAFE website, students may also connect to Callisto, a confidential, third-party reporting site that is not a part of the university. 
+
+Students experiencing any other form of prohibited discrimination or harassment can find information at [https://respect.uoregon.edu/](https://respect.uoregon.edu/) or [https://aaeo.uoregon.edu/](https://aaeo.uoregon.edu/) or contact the non-confidential AAEO office at 541-346-3123 or the Dean of Students Office at 541-346-3216 for help. As UO policy has different reporting requirements based on the nature of the reported harassment or discrimination, additional information about reporting requirements for discrimination or harassment unrelated to sexual assault, relationship violence, sex or gender based bullying, stalking, and/or sexual harassment is available at [http://aaeo.uoregon.edu/content/discrimination-harassment](http://aaeo.uoregon.edu/content/discrimination-harassment) 
+
+Specific details about confidentiality of information and reporting obligations of employees can be found at [https://titleix.uoregon.edu](https://titleix.uoregon.edu). 
+
+
 ## Reporting Obligations
+I am a student-directed employee. For information about my reporting obligations as an employee, please see Employee Reporting Obligations on the Office of Investigations and Civil Rights Compliance (OICRC) website. Students experiencing any form of prohibited discrimination or harassment, including sex or gender-based violence, may seek information and resources at safe.uoregon.edu, respect.uoregon.edu, or investigations.uoregon.edu or contact the non-confidential Title IX office/Office of Civil Rights Compliance (541-346-3123), or Dean of Students offices (541-346-3216), or call the 24-7 hotline 541-346-SAFE for help. I am also a mandatory reporter of child abuse. Please find more information at Mandatory Reporting of Child Abuse and Neglect
+
 ## Academic Misconduct
+The University Student Conduct Code (available at conduct.uoregon.edu) defines academic misconduct. Students are prohibited from committing or attempting to commit any act that constitutes academic misconduct. By way of example, students should not give or receive (or attempt to give or receive) unauthorized help on assignments or examinations without express permission from the instructor. Students should properly acknowledge and document all sources of information (e.g. quotations, paraphrases, ideas) and use only the sources and resources authorized by the instructor. If there is any question about whether an act constitutes academic misconduct, it is the students’ obligation to clarify the question with the instructor before committing or attempting to commit the act. Additional information about a common form of academic misconduct, plagiarism, is available at [https://researchguides.uoregon.edu/citing-plagiarism](https://researchguides.uoregon.edu/citing-plagiarism)
+
 ## Inclement Weather
+It is generally expected that class will meet unless the University is officially closed for inclement weather. If it becomes necessary to cancel class while the University remains open, this will be announced on Canvas and by email. Updates on inclement weather and closure are also communicated in other ways described [here](https://hr.uoregon.edu/about-hr/campus-notifications/inclement-weather/inclement-weather-immediate-updates).
+
 ## Mental Health and Wellness
+Life at college can be very complicated. Students often feel overwhelmed or stressed, experience anxiety or depression, struggle with relationships, or just need help navigating challenges in their life. If you're facing such challenges, you don't need to handle them on your own--there's help and support on campus. 
+
+As your instructor if I believe you may need additional support, I will express my concerns, the reasons for them, and refer you to resources that might be helpful. It is not my intention to know the details of what might be bothering you, but simply to let you know I care and that help is available. Getting help is a courageous thing to do—for yourself and those you care about.
+University Health Services help students cope with difficult emotions and life stressors. If you need general resources on coping with stress or want to talk with another student who has been in the same place as you, visit the Duck Nest (located in the EMU on the ground floor) and get help from one of the specially trained Peer Wellness Advocates. Find out more at health.uoregon.edu/ducknest. 
+
+University Counseling Services (UCS) has a team of dedicated staff members to support you with your concerns, many of whom can provide identity-based support. All clinical services are free and confidential. Find out more at counseling.uoregon.edu or by calling 541-346-3227 (anytime UCS is closed, the After-Hours Support and Crisis Line is available by calling this same number).
+
 ## Basic Needs
+Any student who has difficulty affording groceries or accessing sufficient food to eat every day, or who lacks a safe and stable place to live and believes this may affect their performance in the course is urged to contact the Dean of Students Office (346-3216, 164 Oregon Hall) for support.
+This UO webpage includes resources for food, housing, healthcare, childcare, transportation, technology, finances, and legal support: https://blogs.uoregon.edu/basicneeds/food/
+
 ## Accommodation for Religious Observances
+The university makes reasonable accommodations, upon request, for students who are unable to attend a class for religious obligations or observance reasons, in accordance with the university discrimination policy which says “Any student who, because of religious beliefs, is unable to attend classes on a particular day shall be excused from attendance requirements and from any examination or other assignment on that day. The student shall make up the examination or other assignment missed because of the absence.” To request accommodations for this course for religious observance, visit the Office of the Registrar's website (https://registrar.uoregon.edu/calendars/religious-observances) and complete and submit to the instructor the “Student Religious Accommodation Request” form prior to the end of the second week of the term.
+
 ## Conflict Resolution
+Several options, both informal and formal, are available to resolve conflicts for students who believe they have been subjected to or have witnessed bias, unfairness, or other improper treatment. 
+
+It is important to exhaust the administrative remedies available to you including discussing the conflict with the specific individual, contacting the Department Head, or within the College of Education, fall term you can contact the Associate Dean for Academic Affairs, Sylvia Linan-Thompson, [sthomps5@uoregon.edu](mailto : sthomps5@uoregon.edu). Outside the College, you can contact: 
+
+*	[UO Bias Response Team](http://bias.uoregon.edu/whatbrt.htm): 346-3216  
+*	[Conflict Resolution Services}(http://studentlife.uoregon.edu/support): 346-3216 
+*	[Affirmative Action and Equal Opportunity](http://aaeo.uoregon.edu/): 346-3123 
+
 ## Grievance Policy
+A student or group of students of the College of Education may appeal decisions or actions pertaining to admissions, programs, evaluation of performance and program retention and completion. Students who decide to file a grievance should follow University [student grievance procedures](https://policies.uoregon.edu/grievance-procedures) and/or consult with the College Associate Dean for Academic Affairs (Sylvia Linan-Thompson, [sthomps5@uoregon.edu](mailto : sthomps5@uoregon.edu).
+
 ## Course Incomplete Policy
-## More per university requirements...
+Students are expected to be familiar with university policy regarding grades of “incomplete” and the time line for completion. For details on the policy and procedures regarding incompletes, Please see: [https://education.uoregon.edu/academics/incompletes-courses](https://education.uoregon.edu/academics/incompletes-courses)
 
 
 
